--- a/test/locales/de_DE.json
+++ b/test/locales/de_DE.json
@@ -1,6 +1,6 @@
 {
   "test": {
     "title": "__count__ singular",
-    "title_plural2": "__count__ plural"
+    "title_plural_2": "__count__ plural"
   }
 }
